--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,8 +1,8 @@
 <h1>Add a new review:</h1>
 
 <%= form_for [@product, @review] do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+  <%= f.label :author %>
+  <%= f.text_field :author %>
   <%= f.label :content_body %>
   <%= f.text_area :content_body %>
   <%= f.label :rating %>
