--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,19 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
+ <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+          <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand" href="/">Home</a>
+            <a class="navbar-brand" href="/products">Products</a>
+          </nav>
+          <%= yield %>
+        </div>
+        <div class="col-md-3"></div>
+      </div>
+    </div>
   </body>
 </html>
