--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
         <div class="col-md-3"></div>
         <div class="col-md-6">
           <nav class="navbar navbar-light bg-light">
+            <%= flash[:alert] %>
+            <%= flash[:notice] %>
             <a class="navbar-brand" href="/">Home</a>
             <a class="navbar-brand" href="/products">Products</a>
           </nav>
