--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,7 +4,7 @@
 <% if @product.reviews.any? %>
   <h4>Here are the reviews for this product:</h4>
 
-  <% @product.reviews.each do |song| %>
+  <% @product.reviews.each do |review| %>
     <ul>
       <li>
         <%= link_to review.author, product_review_path(@product, review) %>
