--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,10 +1,6 @@
 <h1>Reviewer: <%= @review.author %></h1>
 <h2>Product: <%= @product.name %></h2>
+<h4>Rating: <%= @review.rating %> stars</h4>
 <h3><%= @review.content_body %></h3>
-
-<p><%= link_to "Edit review", edit_product_review_path(@product, @review) %></p>
-<p><%= link_to "Delete review", product_review_path(@product, @review),
-                        :data => {:confirm => "Are you sure?",
-                                       :method => "delete"} %></p>
 
 <p><%= link_to "Return to product", product_path(@product) %></p>
