--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
 <h3>$<%= @product.cost %></h3>
 
 <% if @product.reviews.any? %>
-  <h4>Here are the reviews for this product:</h4>
+  <h4>Here are the reviews for this product, by author:</h4>
 
   <% @product.reviews.each do |review| %>
     <ul>
