--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,27 @@
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+
+
+.box {
+  padding: 50px;
+  margin: 25%;
+  border-radius: 8px ;
+  background-color: white;
+  opacity: 90%;
+}
+ 
+
+body {
+  background-color: black;
+  background-image: asset-url("images/mountain-tea.jpg");
+}
+
+h1 {
+  color: azure
+}
+
+h4 {
+  color: azure
+}
