--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,11 @@
       <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-4">
+          <% if current_user %>
+            <%= current_user.email %> | <%= link_to "Sign out", 'signout' %>
+          <% else %>
+            <%= link_to "Sign up", 'signup' %> | <%= link_to "Sign in", 'signin' %>
+          <% end %>
           <nav class="navbar navbar-light bg-light">
             <%= flash[:alert] %>
             <%= flash[:notice] %>
