--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,9 @@
         <div class="col-md-4"></div>
         <div class="col-md-4">
           <% if current_user %>
-            <%= current_user.email %> | <%= link_to "Sign out", 'signout' %>
+            <%= current_user.email %> | <%= link_to "Sign out", signout_path %>
           <% else %>
-            <%= link_to "Sign up", 'signup' %> | <%= link_to "Sign in", 'signin' %>
+            <%= link_to "Sign up", signup_path %> | <%= link_to "Sign in", signin_path %>
           <% end %>
           <nav class="navbar navbar-light bg-light">
             <%= flash[:alert] %>
