add edit/delete review functionality to reviews for admins

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,5 +9,6 @@
 <% else %>
   <p>There are no products yet.</p>
 <% end %>
-
-<p><%= link_to "Create new product", new_product_path %></p>
+<% if current_user && current_user.admin %>
+  <p><%= link_to "Create new product", new_product_path %></p>
+<% end %>
