--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -3,4 +3,11 @@
 <h4>Rating: <%= @review.rating %> stars</h4>
 <h3><%= @review.content_body %></h3>
 
+<% if current_user && current_user.admin %>
+  <p><%= link_to "Edit", edit_product_review_path(@review) %></p>
+  <p><%= link_to "Delete", product_review_path(@review),
+                         :data => {:confirm => "You sure?",
+                                   :method => "delete"} %></p>
+<% end %>
+
 <p><%= link_to "Return to product", product_path(@product) %></p>
